# crmfrappe

./: .gitignore  README.md  create_insurance_fields.py
custom_app/: apps.txt  hooks.py  pyproject.toml
custom_app/insurance_crm/: __init__.py  analytics.py  automation.py  dashboard.py  integrations.py
